@@ -1,4 +1,5 @@
 ﻿using System.Windows.Forms;
+using ProcessHacker.Native;
 using ProcessHacker.Native.Objects;
 
 namespace ProcessHacker.Components
@@ -22,7 +23,30 @@ namespace ProcessHacker.Components
             var basicInfo = _mutantHandle.GetBasicInformation();
 
             labelCurrentCount.Text = basicInfo.CurrentCount.ToString();
-            labelAbandoned.Text = (basicInfo.AbandonedState != 0).ToString();
+            labelAbandoned.Text = basicInfo.AbandonedState.ToString();
+
+            // Windows Vista and above have owner information.
+            if (OSVersion.IsAboveOrEqual(WindowsVersion.Vista))
+            {
+                var ownerInfo = _mutantHandle.GetOwnerInformation();
+
+                if (ownerInfo.ClientId.ProcessId != 0)
+                {
+                    labelOwner.Text = ownerInfo.ClientId.GetName(true);
+                }
+                else
+                {
+                    labelOwner.Text = "N/A";
+                }
+
+                labelLabelOwner.Visible = true;
+                labelOwner.Visible = true;
+            }
+            else
+            {
+                labelLabelOwner.Visible = false;
+                labelOwner.Visible = false;
+            }
         }
     }
 }
